[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://MapTexture.gd" type="Script" id=3]
[ext_resource path="res://MainTheme.tres" type="Theme" id=4]
[ext_resource path="res://background.png" type="Texture" id=5]
[ext_resource path="res://theme_control_labels.tres" type="Theme" id=6]
[ext_resource path="res://theme_tooltip.tres" type="Theme" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="MapTexture" type="Sprite" parent="."]
centered = false
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="LabelCoordBase" type="Label" parent="."]
visible = false
margin_right = 126.0
margin_bottom = 19.0
theme = ExtResource( 4 )
text = "This is a test"

[node name="ControlPanel" type="CanvasLayer" parent="."]

[node name="PanelBackground" type="ColorRect" parent="ControlPanel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -296.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="dragAndDrop" type="Label" parent="ControlPanel/PanelBackground"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -108.0
margin_top = 8.0
margin_right = 108.0
margin_bottom = 71.0
theme = ExtResource( 7 )
text = "Drag and drop an image from your computer into this window."
align = 1
autowrap = true

[node name="SectionGridSettings" type="ColorRect" parent="ControlPanel/PanelBackground"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -148.0
margin_top = 88.0
margin_right = 148.0
margin_bottom = 115.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="LabelGrid" type="Label" parent="ControlPanel/PanelBackground/SectionGridSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
theme = ExtResource( 6 )
text = "GRID SETTINGS"
align = 1
valign = 1

[node name="LabelRows" type="Label" parent="ControlPanel/PanelBackground"]
margin_left = 17.0
margin_top = 194.0
margin_right = 82.0
margin_bottom = 222.0
theme = ExtResource( 6 )
text = "ROWS:"
valign = 1

[node name="ValueRows" type="LineEdit" parent="ControlPanel/PanelBackground/LabelRows"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 31.0
margin_top = -19.0
margin_right = 80.0
margin_bottom = 19.0
theme = ExtResource( 4 )
text = "10"
align = 1

[node name="ButtonIncRows" type="Button" parent="ControlPanel/PanelBackground/LabelRows/ValueRows"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 25.0
theme = ExtResource( 4 )
text = "+"

[node name="ButtonDecRows" type="Button" parent="ControlPanel/PanelBackground/LabelRows/ValueRows"]
anchor_bottom = 1.0
margin_left = -25.0
theme = ExtResource( 4 )
text = "-"

[node name="LabelCols" type="Label" parent="ControlPanel/PanelBackground"]
margin_left = 17.0
margin_top = 146.0
margin_right = 82.0
margin_bottom = 174.0
theme = ExtResource( 6 )
text = "COLS:"
valign = 1

[node name="ValueCols" type="LineEdit" parent="ControlPanel/PanelBackground/LabelCols"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 31.0
margin_top = -19.0
margin_right = 80.0
margin_bottom = 19.0
theme = ExtResource( 4 )
text = "10"
align = 1

[node name="ButtonIncCols" type="Button" parent="ControlPanel/PanelBackground/LabelCols/ValueCols"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 25.0
theme = ExtResource( 4 )
text = "+"

[node name="ButtonDecCols" type="Button" parent="ControlPanel/PanelBackground/LabelCols/ValueCols"]
anchor_bottom = 1.0
margin_left = -25.0
theme = ExtResource( 4 )
text = "-"

[node name="LabelCellSize" type="Label" parent="ControlPanel/PanelBackground"]
margin_left = 57.0
margin_top = 242.0
margin_right = 200.0
margin_bottom = 270.0
theme = ExtResource( 6 )
text = "CELL SIZE: "
valign = 1

[node name="ValueCellSize" type="LineEdit" parent="ControlPanel/PanelBackground/LabelCellSize"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -19.0
margin_right = 44.0
margin_bottom = 19.0
theme = ExtResource( 4 )
text = "100"
align = 1

[node name="tooltip2" type="Label" parent="ControlPanel/PanelBackground/LabelCellSize"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -122.5
margin_top = 7.0
margin_right = 160.5
margin_bottom = 48.0
theme = ExtResource( 7 )
text = "pixels per grid square.
Commonly 70, 72, or 100"
align = 1
autowrap = true

[node name="LabelGridLineWidth" type="Label" parent="ControlPanel/PanelBackground"]
margin_left = 17.0
margin_top = 338.0
margin_right = 238.0
margin_bottom = 366.0
theme = ExtResource( 6 )
text = "GRID LINE WIDTH: "
valign = 1

[node name="ValueGridLineWidth" type="LineEdit" parent="ControlPanel/PanelBackground/LabelGridLineWidth"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -19.0
margin_right = 31.0
margin_bottom = 19.0
theme = ExtResource( 4 )
custom_constants/minimum_spaces = 2
text = "1"
align = 1

[node name="LabelGridColor" type="Label" parent="ControlPanel/PanelBackground"]
margin_left = 201.0
margin_top = 144.0
margin_right = 279.0
margin_bottom = 172.0
theme = ExtResource( 6 )
text = "COLOR:"
valign = 1

[node name="ColorPicker" type="ColorPickerButton" parent="ControlPanel/PanelBackground/LabelGridColor"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 30.0
margin_bottom = 54.0
hint_tooltip = "Click to change color of grid lines"

[node name="SectionCoordSettings" type="ColorRect" parent="ControlPanel/PanelBackground"]
anchor_right = 1.0
margin_top = 397.0
margin_bottom = 423.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="LabelGrid" type="Label" parent="ControlPanel/PanelBackground/SectionCoordSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
theme = ExtResource( 6 )
text = "COORD FONT SETTINGS"
align = 1
valign = 1

[node name="LabelCoordinateFontSize" type="Label" parent="ControlPanel/PanelBackground"]
margin_left = 56.0
margin_top = 442.0
margin_right = 186.0
margin_bottom = 470.0
theme = ExtResource( 6 )
text = "FONT SIZE:"
valign = 1

[node name="ValueCoordFontSize" type="LineEdit" parent="ControlPanel/PanelBackground/LabelCoordinateFontSize"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 11.0
margin_top = -19.0
margin_right = 60.0
margin_bottom = 19.0
theme = ExtResource( 4 )
custom_constants/minimum_spaces = 3
text = "16"
align = 1

[node name="ButtonToggleCoordOutline" type="CheckButton" parent="ControlPanel/PanelBackground"]
margin_left = 34.0
margin_top = 478.0
margin_right = 270.0
margin_bottom = 518.0
theme = ExtResource( 4 )
text = "FONT OUTLINE"

[node name="ButtonSaveMapPNG" type="Button" parent="ControlPanel/PanelBackground"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -97.0
margin_top = 544.0
margin_right = 97.0
margin_bottom = 578.0
theme = ExtResource( 4 )
text = "Save Map Image"

[node name="DialogSaveMap" type="WindowDialog" parent="ControlPanel"]
visible = true
margin_left = -203.0
margin_top = -85.0
margin_right = 213.0
margin_bottom = 98.0
window_title = "Save Map"

[node name="ColorRect" type="ColorRect" parent="ControlPanel/DialogSaveMap"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LabelFilename" type="Label" parent="ControlPanel/DialogSaveMap"]
margin_left = 9.0
margin_top = 18.0
margin_right = 152.0
margin_bottom = 46.0
theme = ExtResource( 6 )
text = "Filename:"
valign = 1

[node name="ValueFilename" type="LineEdit" parent="ControlPanel/DialogSaveMap/LabelFilename"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -19.0
margin_right = 254.0
margin_bottom = 19.0
theme = ExtResource( 4 )

[node name="dragAndDrop2" type="Label" parent="ControlPanel/DialogSaveMap/LabelFilename"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.5
margin_top = 13.0
margin_right = 332.5
margin_bottom = 76.0
theme = ExtResource( 7 )
text = "Saved Maps can be found on your Desktop. The folder will open automatically after the map is saved."
align = 1
autowrap = true

[node name="LabelCellSize2" type="Label" parent="ControlPanel/DialogSaveMap"]
visible = false
margin_left = 9.0
margin_top = 66.0
margin_right = 152.0
margin_bottom = 94.0
theme = ExtResource( 6 )
text = "Filetype:"
valign = 1

[node name="LabelPNG" type="Label" parent="ControlPanel/DialogSaveMap"]
visible = false
margin_left = 9.0
margin_top = 106.0
margin_right = 152.0
margin_bottom = 134.0
theme = ExtResource( 6 )
text = "PNG:"
valign = 1

[node name="dragAndDrop" type="Label" parent="ControlPanel/DialogSaveMap/LabelPNG"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -8.0
margin_right = 292.0
margin_bottom = 33.0
theme = ExtResource( 7 )
text = "Larger file size, no loss of details."
autowrap = true

[node name="LabelJPG" type="Label" parent="ControlPanel/DialogSaveMap"]
visible = false
margin_left = 9.0
margin_top = 146.0
margin_right = 152.0
margin_bottom = 174.0
theme = ExtResource( 6 )
text = "JPG:"
valign = 1

[node name="dragAndDrop2" type="Label" parent="ControlPanel/DialogSaveMap/LabelJPG"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -7.0
margin_right = 331.0
margin_bottom = 56.0
theme = ExtResource( 7 )
text = "Smaller file size, finer details lost. Good for uploading to VTTs"
autowrap = true

[node name="ButtonSaveMap" type="Button" parent="ControlPanel/DialogSaveMap"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -184.0
margin_top = -50.0
margin_right = -16.0
margin_bottom = -16.0
theme = ExtResource( 4 )
text = "Save"

[node name="ButtonCancel" type="Button" parent="ControlPanel/DialogSaveMap"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -50.0
margin_right = 184.0
margin_bottom = -16.0
theme = ExtResource( 4 )
text = "Cancel"

[node name="OptionButton" type="OptionButton" parent="ControlPanel/DialogSaveMap"]
visible = false
margin_left = 136.0
margin_top = 64.0
margin_right = 204.0
margin_bottom = 98.0
theme = ExtResource( 4 )
text = "PNG"
items = [ "PNG", null, false, 0, null, "JPG", null, false, 1, null ]
selected = 0

[node name="Background" type="CanvasLayer" parent="."]
layer = -128

[node name="TextureProgress" type="TextureRect" parent="Background"]
margin_right = 2560.0
margin_bottom = 1440.0
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="text_entered" from="ControlPanel/PanelBackground/LabelRows/ValueRows" to="." method="_on_ValueRows_text_entered"]
[connection signal="pressed" from="ControlPanel/PanelBackground/LabelRows/ValueRows/ButtonIncRows" to="." method="_on_ButtonGridRows_Adjust" binds= [ 1 ]]
[connection signal="pressed" from="ControlPanel/PanelBackground/LabelRows/ValueRows/ButtonDecRows" to="." method="_on_ButtonGridRows_Adjust" binds= [ -1 ]]
[connection signal="text_entered" from="ControlPanel/PanelBackground/LabelCols/ValueCols" to="." method="_on_ValueCols_text_entered"]
[connection signal="pressed" from="ControlPanel/PanelBackground/LabelCols/ValueCols/ButtonIncCols" to="." method="_on_ButtonGridCols_Adjust" binds= [ 1 ]]
[connection signal="pressed" from="ControlPanel/PanelBackground/LabelCols/ValueCols/ButtonDecCols" to="." method="_on_ButtonGridCols_Adjust" binds= [ -1 ]]
[connection signal="text_entered" from="ControlPanel/PanelBackground/LabelCellSize/ValueCellSize" to="." method="_on_ValueCellSize_text_entered"]
[connection signal="text_entered" from="ControlPanel/PanelBackground/LabelGridLineWidth/ValueGridLineWidth" to="." method="_on_ValueGridLineWidth_text_entered"]
[connection signal="color_changed" from="ControlPanel/PanelBackground/LabelGridColor/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="text_entered" from="ControlPanel/PanelBackground/LabelCoordinateFontSize/ValueCoordFontSize" to="." method="_on_ValueCoordFontSize_text_entered"]
[connection signal="toggled" from="ControlPanel/PanelBackground/ButtonToggleCoordOutline" to="." method="_on_ButtonToggleCoordOutline_toggled"]
[connection signal="pressed" from="ControlPanel/PanelBackground/ButtonSaveMapPNG" to="." method="_on_ButtonSaveMap_pressed"]
[connection signal="about_to_show" from="ControlPanel/DialogSaveMap" to="." method="_on_DialogSaveMap_about_to_show"]
[connection signal="pressed" from="ControlPanel/DialogSaveMap/ButtonSaveMap" to="." method="_on_ButtonSaveMap"]
[connection signal="pressed" from="ControlPanel/DialogSaveMap/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
